# d2animdata

./: .gitignore  .pylintrc  LICENSE  README.md  animdata.py  api.md  d2animdata.py  pydocmd.yml  pyproject.toml  requirements-build-test.txt  requirements-build.txt  requirements-dev.txt  requirements-lint.txt  requirements-test.txt  setup.py  tox.ini
.github/workflows/: build.yml
src/: d2animdata.py
tests/: test_animdata.py  test_cli.py  test_models.py  test_txt.py  valid_data.py
